// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`doSnapshot characterization — Scenario 1: all-existing entities > pins the D1-write stream for a doc whose entities all have real _id 1`] = `
[
  {
    "binds": [
      "<uint8array:nonempty>",
      0,
      0,
      2,
      "2026-01-01T00:00:00.000Z",
      42,
      1,
    ],
    "op": "run",
    "sql": "UPDATE projects SET yjs_state = ?, yjs_generation = ?, yjs_seq = ?, yjs_write = ?, updated_at = ? WHERE id = ? AND yjs_write = ?",
  },
  {
    "op": "batch",
    "statements": [
      {
        "binds": [
          42,
          2,
        ],
        "sql": "INSERT INTO yjs_write_guard (project_id, expected) VALUES (?, ?)",
      },
      {
        "binds": [
          3,
          42,
        ],
        "sql": "UPDATE projects SET yjs_write = ? WHERE id = ?",
      },
      {
        "binds": [
          "Demo",
          "Desc",
          "Author",
          "a@b.c",
          "en",
          "",
          "",
          "",
          "",
          0,
          0,
          "",
          1,
          1,
          1,
          1,
          1,
          0,
          0,
          0,
          4,
          "",
          "[]",
          "2026-01-01T00:00:00.000Z",
          42,
        ],
        "sql": "UPDATE project_config SET title = ?, description = ?, author = ?, email = ?, lang = ?, baseurl = ?, url = ?, theme = ?, logo = ?, include_demo_content = ?, google_sheets_enabled = ?, google_sheets_published_url = ?, show_on_homepage = ?, show_story_steps = ?, show_object_credits = ?, browse_and_search = ?, show_link_on_homepage = ?, show_sample_on_homepage = ?, collection_mode = ?, skip_stories = ?, featured_count = ?, story_key = ?, navigation_json = ?, updated_at = ? WHERE project_id = ?",
      },
      {
        "binds": [
          "s1",
          "Story One",
          "",
          "",
          0,
          null,
          0,
          0,
          0,
          null,
          null,
          11,
        ],
        "sql": "UPDATE stories SET story_id = COALESCE(NULLIF(?, ''), story_id), title = COALESCE(?, title), subtitle = COALESCE(?, subtitle), byline = COALESCE(?, byline), "order" = ?, order_key = ?, private = ?, draft = ?, show_sections = ?, last_edited_by = COALESCE(?, last_edited_by), updated_at = COALESCE(?, updated_at) WHERE id = ?",
      },
      {
        "binds": [
          42,
        ],
        "sql": "DELETE FROM yjs_write_guard WHERE project_id = ?",
      },
    ],
  },
]
`;

exports[`doSnapshot characterization — Scenario 2: new entities (INSERT + backfill) > pins the interleaved INSERT/run() stream and blob-after-inserts ordering 1`] = `
[
  {
    "binds": [
      42,
      "new-s",
      "New Story",
      "",
      "",
      0,
      null,
      0,
      0,
      0,
      null,
      null,
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO stories (project_id, story_id, title, subtitle, byline, "order", order_key, private, draft, show_sections, extra_columns, source_path, created_by, last_edited_by, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      1001,
      1,
      null,
      "text",
      "",
      null,
      null,
      null,
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      null,
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO steps (story_id, step_number, order_key, kind, object_id, x, y, zoom, page, question, answer, alt_text, clip_start, clip_end, loop, extra_columns, created_by, last_edited_by, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      1002,
      1,
      null,
      "Layer",
      "",
      "",
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO layers (step_id, layer_number, order_key, title, button_label, content, created_by, last_edited_by, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      42,
      "new-o",
      "Obj",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      0,
      0,
      null,
      "iiif",
      0,
      null,
      null,
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO objects (project_id, object_id, title, creator, description, alt_text, source_url, period, year, object_type, subjects, source, credit, thumbnail, dimensions, extra_columns, featured, image_available, order_key, origin, missing_from_repo, course_project_id, created_by, last_edited_by, created_by_actor, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      42,
      "new-t",
      "Term",
      "Def",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO glossary_terms (project_id, term_id, title, definition, kind, related_terms, extra_columns, order_key, created_by, last_edited_by, created_by_actor, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      42,
      "Page",
      "new-p",
      "Body",
      null,
      null,
      0,
      null,
      null,
      null,
      "2026-01-01T00:00:00.000Z",
    ],
    "op": "run",
    "sql": "INSERT INTO project_pages (project_id, title, slug, body, frontmatter, frontmatter_source, "order", order_key, created_by, last_edited_by, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
  },
  {
    "binds": [
      "<uint8array:nonempty>",
      0,
      0,
      2,
      "2026-01-01T00:00:00.000Z",
      42,
      1,
    ],
    "op": "run",
    "sql": "UPDATE projects SET yjs_state = ?, yjs_generation = ?, yjs_seq = ?, yjs_write = ?, updated_at = ? WHERE id = ? AND yjs_write = ?",
  },
  {
    "op": "batch",
    "statements": [
      {
        "binds": [
          42,
          2,
        ],
        "sql": "INSERT INTO yjs_write_guard (project_id, expected) VALUES (?, ?)",
      },
      {
        "binds": [
          3,
          42,
        ],
        "sql": "UPDATE projects SET yjs_write = ? WHERE id = ?",
      },
      {
        "binds": [
          "Demo",
          "Desc",
          "Author",
          "a@b.c",
          "en",
          "",
          "",
          "",
          "",
          0,
          0,
          "",
          1,
          1,
          1,
          1,
          1,
          0,
          0,
          0,
          4,
          "",
          "[]",
          "2026-01-01T00:00:00.000Z",
          42,
        ],
        "sql": "UPDATE project_config SET title = ?, description = ?, author = ?, email = ?, lang = ?, baseurl = ?, url = ?, theme = ?, logo = ?, include_demo_content = ?, google_sheets_enabled = ?, google_sheets_published_url = ?, show_on_homepage = ?, show_story_steps = ?, show_object_credits = ?, browse_and_search = ?, show_link_on_homepage = ?, show_sample_on_homepage = ?, collection_mode = ?, skip_stories = ?, featured_count = ?, story_key = ?, navigation_json = ?, updated_at = ? WHERE project_id = ?",
      },
      {
        "binds": [
          42,
        ],
        "sql": "DELETE FROM yjs_write_guard WHERE project_id = ?",
      },
    ],
  },
]
`;

exports[`doSnapshot characterization — Scenario 3: cascade delete > pins the story+steps+layers DELETE statements for an orphaned story 1`] = `
[
  {
    "binds": [
      "<uint8array:nonempty>",
      0,
      0,
      2,
      "2026-01-01T00:00:00.000Z",
      42,
      1,
    ],
    "op": "run",
    "sql": "UPDATE projects SET yjs_state = ?, yjs_generation = ?, yjs_seq = ?, yjs_write = ?, updated_at = ? WHERE id = ? AND yjs_write = ?",
  },
  {
    "op": "batch",
    "statements": [
      {
        "binds": [
          42,
          2,
        ],
        "sql": "INSERT INTO yjs_write_guard (project_id, expected) VALUES (?, ?)",
      },
      {
        "binds": [
          3,
          42,
        ],
        "sql": "UPDATE projects SET yjs_write = ? WHERE id = ?",
      },
      {
        "binds": [
          "Demo",
          "Desc",
          "Author",
          "a@b.c",
          "en",
          "",
          "",
          "",
          "",
          0,
          0,
          "",
          1,
          1,
          1,
          1,
          1,
          0,
          0,
          0,
          4,
          "",
          "[]",
          "2026-01-01T00:00:00.000Z",
          42,
        ],
        "sql": "UPDATE project_config SET title = ?, description = ?, author = ?, email = ?, lang = ?, baseurl = ?, url = ?, theme = ?, logo = ?, include_demo_content = ?, google_sheets_enabled = ?, google_sheets_published_url = ?, show_on_homepage = ?, show_story_steps = ?, show_object_credits = ?, browse_and_search = ?, show_link_on_homepage = ?, show_sample_on_homepage = ?, collection_mode = ?, skip_stories = ?, featured_count = ?, story_key = ?, navigation_json = ?, updated_at = ? WHERE project_id = ?",
      },
      {
        "binds": [
          21,
        ],
        "sql": "DELETE FROM layers WHERE step_id = ?",
      },
      {
        "binds": [
          11,
        ],
        "sql": "DELETE FROM steps WHERE story_id = ?",
      },
      {
        "binds": [
          11,
        ],
        "sql": "DELETE FROM stories WHERE id = ?",
      },
      {
        "binds": [
          42,
        ],
        "sql": "DELETE FROM yjs_write_guard WHERE project_id = ?",
      },
    ],
  },
]
`;

exports[`doSnapshot characterization — Scenario 4: contributions + activity > pins project_members UPDATEs, activity_log INSERTs, and the retention prune 1`] = `
[
  {
    "binds": [
      "<uint8array:nonempty>",
      0,
      0,
      2,
      "2026-01-01T00:00:00.000Z",
      42,
      1,
    ],
    "op": "run",
    "sql": "UPDATE projects SET yjs_state = ?, yjs_generation = ?, yjs_seq = ?, yjs_write = ?, updated_at = ? WHERE id = ? AND yjs_write = ?",
  },
  {
    "op": "batch",
    "statements": [
      {
        "binds": [
          42,
          2,
        ],
        "sql": "INSERT INTO yjs_write_guard (project_id, expected) VALUES (?, ?)",
      },
      {
        "binds": [
          3,
          42,
        ],
        "sql": "UPDATE projects SET yjs_write = ? WHERE id = ?",
      },
      {
        "binds": [
          "Demo",
          "Desc",
          "Author",
          "a@b.c",
          "en",
          "",
          "",
          "",
          "",
          0,
          0,
          "",
          1,
          1,
          1,
          1,
          1,
          0,
          0,
          0,
          4,
          "",
          "[]",
          "2026-01-01T00:00:00.000Z",
          42,
        ],
        "sql": "UPDATE project_config SET title = ?, description = ?, author = ?, email = ?, lang = ?, baseurl = ?, url = ?, theme = ?, logo = ?, include_demo_content = ?, google_sheets_enabled = ?, google_sheets_published_url = ?, show_on_homepage = ?, show_story_steps = ?, show_object_credits = ?, browse_and_search = ?, show_link_on_homepage = ?, show_sample_on_homepage = ?, collection_mode = ?, skip_stories = ?, featured_count = ?, story_key = ?, navigation_json = ?, updated_at = ? WHERE project_id = ?",
      },
      {
        "binds": [
          "s1",
          "Story One",
          "",
          "",
          0,
          null,
          0,
          0,
          0,
          null,
          null,
          11,
        ],
        "sql": "UPDATE stories SET story_id = COALESCE(NULLIF(?, ''), story_id), title = COALESCE(?, title), subtitle = COALESCE(?, subtitle), byline = COALESCE(?, byline), "order" = ?, order_key = ?, private = ?, draft = ?, show_sections = ?, last_edited_by = COALESCE(?, last_edited_by), updated_at = COALESCE(?, updated_at) WHERE id = ?",
      },
      {
        "binds": [
          "{"stories_edited":[],"objects_edited":[],"fields_edited":1,"sessions":1,"last_active":"2025-12-25T09:30:00.000Z"}",
          42,
          7,
        ],
        "sql": "UPDATE project_members SET contributions = ? WHERE project_id = ? AND user_id = ?",
      },
      {
        "binds": [
          42,
          7,
          "edited",
          "story",
          "s1",
          "Story One",
          "2026-01-01T00:00:00.000Z",
        ],
        "sql": "INSERT INTO activity_log (project_id, actor_user_id, verb, entity_type, entity_id, entity_label, created_at) VALUES (?, ?, ?, ?, ?, ?, ?)",
      },
      {
        "binds": [
          42,
          42,
          200,
        ],
        "sql": "DELETE FROM activity_log
                 WHERE project_id = ?
                   AND id NOT IN (
                     SELECT id FROM activity_log
                     WHERE project_id = ?
                     ORDER BY created_at DESC, id DESC
                     LIMIT ?
                   )",
      },
      {
        "binds": [
          42,
        ],
        "sql": "DELETE FROM yjs_write_guard WHERE project_id = ?",
      },
    ],
  },
]
`;
